--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 注意：标题中的版本号需与 src/constants.py 中的 APP_VERSION 保持同步 -->
     <title>AI-Router-Lite 管理面板</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -13,7 +14,8 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <h1>🚀 AI-Router</h1>
-                <span class="version">v0.4.0</span>
+                <!-- 注意：此版本号需与 src/constants.py 中的 APP_VERSION 保持同步 -->
+                <span class="version" id="app-version">v0.4.0</span>
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="nav-item active" data-page="dashboard">
@@ -153,10 +155,11 @@
                     </div>
                 </div>
 
+                <!-- 注意：自动健康检测间隔与 src/constants.py 中的 AUTO_HEALTH_CHECK_INTERVAL_HOURS 保持同步 -->
                 <div class="auto-refresh-control">
                     <label>
                         <input type="checkbox" id="auto-refresh-providers" onchange="Providers.toggleAutoRefresh()">
-                        自动刷新测试（每60秒）
+                        自动健康检测（每6小时，跳过近期有活动的模型）
                     </label>
                 </div>
 
