--- a/static/index.html
+++ b/static/index.html
@@ -235,6 +235,7 @@
                                 <option value="">全部</option>
                                 <option value="system">System</option>
                                 <option value="admin">Admin</option>
+                                <option value="sync">Sync</option>
                                 <option value="request">Request</option>
                                 <option value="response">Response</option>
                                 <option value="error">Error</option>
