refactor(log-filter): implement multi-field text search for log entries
Extend filtering capability beyond single-field matching by introducing
a unified keyword parameter that performs case-insensitive substring
matching across message, model, provider, actual_model, error, and
api_key_name attributes simultaneously.

Changes span the full stack:
- Backend: LogManager.get_recent_logs() now accepts keyword arg
- API: /logs endpoint parameter renamed from model to keyword
- Frontend: filter input updated with corresponding JS logic

--- a/static/index.html
+++ b/static/index.html
@@ -255,8 +255,8 @@
                             </select>
                         </div>
                         <div class="filter-group">
-                            <label>模型</label>
-                            <input type="text" id="filter-model" placeholder="输入模型名" onchange="Logs.applyFilters()">
+                            <label>关键词</label>
+                            <input type="text" id="filter-keyword" placeholder="输入关键词" onchange="Logs.applyFilters()">
                         </div>
                         <div class="filter-group">
                             <label>数量</label>
