refactor(provider-stats): move provider statistics from memory to persistent log storage
- Add provider_stats field to LogManager for detailed success/failure tracking
- Remove redundant request counters from ProviderState (total, successful, failed)
- Update ProviderManager.get_stats() to fetch provider statistics from log system
- Add get_provider_stats() method in LogManager with backward compatibility
- Replace API keys stat card with total tokens display in dashboard
- Update dashboard.js to display token statistics instead of API keys count
- Standardize provider toggle button styling to btn-secondary

--- a/static/index.html
+++ b/static/index.html
@@ -82,10 +82,10 @@
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">🔑</div>
+                        <div class="stat-icon">🎫</div>
                         <div class="stat-info">
-                            <span class="stat-value" id="stat-keys">-</span>
-                            <span class="stat-label">API 密钥</span>
+                            <span class="stat-value" id="stat-tokens">-</span>
+                            <span class="stat-label">统计 Tokens</span>
                         </div>
                     </div>
                     <div class="stat-card">
