style(ui): remove emoji icons from button labels
Remove emoji characters from buttons across the admin interface
for a cleaner, more consistent visual appearance.

- Remove emojis from API keys, providers, model mapping pages
- Remove emojis from action buttons (create, edit, delete, sync, etc.)
- Add provider ID-Name map loading for model mapping display

--- a/static/index.html
+++ b/static/index.html
@@ -130,7 +130,7 @@
                 <div class="page-header">
                     <h2>API 密钥管理</h2>
                     <button class="btn btn-primary" onclick="APIKeys.showCreateModal()">
-                        ➕ 创建密钥
+                           创建密钥
                     </button>
                 </div>
 
@@ -160,10 +160,10 @@
                     <h2>服务站管理</h2>
                     <div class="header-actions">
                             <button id="btn-update-all-channels" class="btn btn-secondary" onclick="Providers.updateAllChannels()">
-                                🔄 更新全部渠道
+                                更新全部渠道
                             </button>
                             <button class="btn btn-primary" onclick="Providers.showCreateModal()">
-                            ➕ 添加服务站
+                                添加服务站
                         </button>
                     </div>
                 </div>
@@ -187,10 +187,10 @@
                     <h2>模型映射配置</h2>
                     <div class="header-actions">
                         <button class="btn btn-secondary" onclick="ModelMap.syncAll()">
-                            🔄 同步全部
+                             同步全部
                         </button>
                         <button class="btn btn-primary" onclick="ModelMap.showCreateModal()">
-                            ➕ 添加映射
+                             添加映射
                         </button>
                     </div>
                 </div>
@@ -223,10 +223,10 @@
                             实时更新
                         </label>
                         <button class="btn btn-secondary" onclick="Logs.clear()">
-                            🗑️ 清空显示
+                             清空显示
                         </button>
                         <button class="btn btn-primary" onclick="Logs.refresh()">
-                            🔄 刷新
+                             刷新
                         </button>
                     </div>
                 </div>
