refactor: centralize config paths and polish UI
- Centralize configuration file paths in `src/constants.py` to remove hardcoded strings
- Fix provider update logic to support clearing fields using `exclude_unset=True`
- Replace model map context menu with direct access to protocol settings
- Update protocol badge styling to dynamically reflect model health status
- Remove emojis from application headers and logs for a cleaner interface
- Remove redundant success toast notifications from frontend operations

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
         <!-- 侧边栏 -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1>🚀 AI-Router</h1>
+                <h1> AI-Router</h1>
                 <!-- 注意：此版本号需与 src/constants.py 中的 APP_VERSION 保持同步 -->
                 <span class="version" id="app-version">v0.4.0</span>
             </div>
