feat(ui): redesign provider cards and extract health logic
- Extract provider health rendering logic to `static/js/provider-health.js`
- Redesign dashboard status cards with compact layout and success rates
- Add visual indicators for request success levels (success/warning/danger)
- Include provider enabled status in stats API response
- Refactor `providers.js` and `dashboard.js` to use shared health logic

--- a/static/index.html
+++ b/static/index.html
@@ -306,6 +306,7 @@
     <script src="js/toast.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/api-keys.js"></script>
+    <script src="js/provider-health.js"></script>
     <script src="js/providers.js"></script>
     <script src="js/model-map.js"></script>
     <script src="js/logs.js"></script>
