feat(ui): redesign model map list with a card-based layout
Replaces the previous list-style display for model mappings with a modern, responsive grid of cards. This new design improves information density and visual clarity.

Key changes:
- Implements a responsive `grid` layout for model map cards.
- Introduces an "Available/Total" model count badge, which provides a more accurate health status by considering disabled providers and model runtime states.
- Replaces text-based action buttons with a more compact set of icon buttons (Sync, Health, Edit, Delete).
- Adds a new metadata row to concisely display provider count, exclusions, manual includes, and last sync time.
- Displays the configured weight for each provider in the resolved models list.

--- a/static/index.html
+++ b/static/index.html
@@ -189,8 +189,7 @@
                 <div class="card">
                     <p class="help-text">
                         模型映射允许您将统一的模型名称映射到多个实际模型。
-                        通过配置匹配规则（关键字、正则表达式等），系统会自动从所有渠道中匹配模型。
-                        匹配规则会被持久化存储，用于后续自动更新、自动匹配和自动测活。
+                        通过配置匹配规则，系统会自动从所有渠道中匹配模型，用于后续自动更新、自动匹配和自动测活。
                     </p>
                     
                     <!-- 同步配置区域 -->
