--- a/static/index.html
+++ b/static/index.html
@@ -240,8 +240,7 @@
                                 <option value="system">System</option>
                                 <option value="admin">Admin</option>
                                 <option value="sync">Sync</option>
-                                <option value="response">Response</option>
-                                <option value="error">Error</option>
+                                <option value="proxy">Proxy</option>
                             </select>
                         </div>
                         <div class="filter-group">
