--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -22,23 +23,23 @@
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="nav-item active" data-page="dashboard">
-                    <span class="nav-icon">📊</span>
+                    <span class="nav-icon"><i class="ri-dashboard-3-line"></i></span>
                     <span class="nav-text">仪表板</span>
                 </a>
                 <a href="#" class="nav-item" data-page="api-keys">
-                    <span class="nav-icon">🔑</span>
+                    <span class="nav-icon"><i class="ri-key-2-line"></i></span>
                     <span class="nav-text">密钥管理</span>
                 </a>
                 <a href="#" class="nav-item" data-page="providers">
-                    <span class="nav-icon">🌐</span>
+                    <span class="nav-icon"><i class="ri-server-line"></i></span>
                     <span class="nav-text">服务站管理</span>
                 </a>
                 <a href="#" class="nav-item" data-page="model-map">
-                    <span class="nav-icon">🔄</span>
+                    <span class="nav-icon"><i class="ri-git-merge-line"></i></span>
                     <span class="nav-text">模型映射</span>
                 </a>
                 <a href="#" class="nav-item" data-page="logs">
-                    <span class="nav-icon">📜</span>
+                    <span class="nav-icon"><i class="ri-file-list-3-line"></i></span>
                     <span class="nav-text">日志监控</span>
                 </a>
             </nav>
@@ -82,28 +83,28 @@
                 <!-- 统计卡片 -->
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <div class="stat-icon">📡</div>
+                        <div class="stat-icon"><i class="ri-signal-tower-line"></i></div>
                         <div class="stat-info">
                             <span class="stat-value" id="stat-providers">-</span>
                             <span class="stat-label">活跃服务站</span>
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">🎫</div>
+                        <div class="stat-icon"><i class="ri-ticket-line"></i></div>
                         <div class="stat-info">
                             <span class="stat-value" id="stat-tokens">-</span>
                             <span class="stat-label">统计 Tokens</span>
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">📨</div>
+                        <div class="stat-icon"><i class="ri-send-plane-line"></i></div>
                         <div class="stat-info">
                             <span class="stat-value" id="stat-requests">-</span>
                             <span class="stat-label">统计请求</span>
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">✅</div>
+                        <div class="stat-icon"><i class="ri-checkbox-circle-line"></i></div>
                         <div class="stat-info">
                             <span class="stat-value" id="stat-success-rate">-</span>
                             <span class="stat-label">统计成功率</span>
