--- a/static/index.html
+++ b/static/index.html
@@ -308,6 +308,7 @@
     <!-- Toast 容器 -->
     <div id="toast-container" class="toast-container"></div>
 
+    <script src="js/utils.js"></script>
     <script src="js/api.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/toast.js"></script>
