feat(tooltip): introduce centralized tooltip system with rich model data
Adds a dedicated Tooltip module using event delegation to replace scattered
CSS pseudo-element tooltips and Chart.js external tooltip logic. The new
component handles positioning, viewport boundary detection, and content
rendering through a single DOM element.

Backend now returns full ModelInfo objects from provider endpoints instead
of identifier strings, enabling richer tooltip displays with model metadata.

--- a/static/index.html
+++ b/static/index.html
@@ -312,6 +312,7 @@
     <script src="js/api.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/toast.js"></script>
+    <script src="js/tooltip.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/api-keys.js"></script>
     <script src="js/provider-health.js"></script>
