--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
             <div class="sidebar-header">
                 <h1>AI-Router</h1>
                 <!-- 注意：此版本号需与 src/constants.py 中的 APP_VERSION 保持同步 -->
-                <span class="version" id="app-version">v0.8.0</span>
+                <span class="version" id="app-version">v0.9.0</span>
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="nav-item active" data-page="dashboard">
@@ -62,6 +62,14 @@
                 <div class="status-indicator">
                     <span class="status-dot online"></span>
                     <span>服务运行中</span>
+                </div>
+                <div class="footer-actions">
+                    <button class="btn-footer" onclick="App.showChangePasswordModal()" title="修改密码">
+                        <i class="ri-lock-password-line"></i>
+                    </button>
+                    <button class="btn-footer btn-logout" onclick="App.logout()" title="登出">
+                        <i class="ri-logout-box-r-line"></i>
+                    </button>
                 </div>
             </div>
         </aside>
@@ -263,6 +271,7 @@
                                 <option value="">全部</option>
                                 <option value="system">System</option>
                                 <option value="admin">Admin</option>
+                                <option value="auth">Auth</option>
                                 <option value="sync">Sync</option>
                                 <option value="proxy">Proxy</option>
                             </select>
